# ast-call

./: .gitignore  Cargo.toml  README.md  install-whocall.sh  install-whoimpl.sh
.github/workflows/: ci.yml  integration.yml  npm.yml  release.yml  showcase-go.yml  showcase-python.yml  showcase-rust.yml  showcase.yml
crates/ast-call-lang-rust/src/: parser.rs
crates/who-cli/: Cargo.toml
crates/who-cli/src/: bin_whocall.rs  bin_whoimpl.rs  cmd_callers.rs  cmd_impl.rs  cmd_index.rs  output.rs
crates/who-core/src/: lang.rs  resolve.rs  target.rs
crates/who-lang-go/src/: parser.rs
crates/who-lang-java/: Cargo.toml
crates/who-lang-java/src/: lib.rs  parser.rs
crates/who-lang-python/src/: parser.rs
crates/who-lang-ts/: Cargo.toml
crates/who-lang-ts/src/: lib.rs  parser.rs
docs/: ARCHITECTURE.md
npm/whocall-cli/: install.js  package.json
npm/whoimpl-cli/: install.js  package.json
samples/go-project/pkg/: edge_cases.go
samples/java-project/src/main/java/com/example/: App.java  EdgeCases.java
samples/java-project/src/main/java/com/example/service/: Greeting.java  UserService.java
samples/java-project/src/main/java/com/example/utils/: StringUtils.java
samples/rust-project/src/text/: edge_cases.rs  mod.rs  unicode.rs
samples/ts-project/src/: animal.ts  main.ts  utils.ts
